add gambar skill

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <nav class="nav-bar">
             <ul class="nav-bar-items">
                 <li>
-                    <a href="#top">Profil</a>
+                    <a href="#top">Profile</a>
                 </li>
                 <li>
                     <a href="#portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#skill">Keterampilan</a>
+                    <a href="#skill">Skill</a>
                 </li> 
                 <li>
-                    <a href="#experience">Pengalaman</a>
+                    <a href="#experience">Experience</a>
                 </li>
                 <li>
-                    <a href="#education">Pendidikan</a>
+                    <a href="#education">Education</a>
                 </li>
             </ul>            
         </nav>
@@ -38,27 +38,32 @@
     <div class="content">
         <div id="profile-container">
             <img 
-                src="./gambar/profile-picture.png" 
+                src="./gambar/DSC_4151 blue Cropped.jpg" 
                 id="profile-picture"
             >
             <div id="bio">
                 <h1 class="title-1" id="name">Bagas Hary Cendekiawan</h1>
                 <p class="subtitle">
-                    Halo! Saya sekarang
-                    sedang bekerja sebagai Kepala dari Divisi Marketing pada
-                    Perusahaan A. Saya selalu suka untuk terus belajar dan
-                    meningkatkan kemampuan saya. Walaupun saya berlatar
-                    belakang Marketing dan Bisnis, saya juga gemar untuk
-                    melakukan pekerjaan coding atau desain UI/UX. Saya
-                    memiliki banyak pengalaman bekerja dalam tim dan
-                    organisasi, berbicara di depan publik, dan manajemen
-                    waktu yang baik.
+                    Hello everyone! <br> My introduction is Harcen, I'm from Temanggung, Central Java.
+                    Graduated from SMA N 1 Candiroto, majoring in Mathematics and Natural Sciences in 2020.
+                    I have a Deaf identity because since birth. My hobby is jogging, basketball, 
+                    play games, and sports. I need to improve/upgrade my skills so keep on learning.
+                    Even though I have a background in the "Peek Fry" business. 
+                    I'm very interested in fiddling with coding and graphic design.
                 </p>
                 <div class="social-media-container">
-                    <a href=""><img src="gambar/linkedin.png" alt=""></a>
-                    <a href=""><img src="gambar/instagram.png" alt=""></a>
-                    <a href=""><img src="gambar/whatsapp-brands 1.png" alt=""></a>
-                    <a href=""><img src="gambar/envelope-regular 1.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/harcengaming/" target="_blank" >
+                        <img src="gambar/linkedin.png" alt="Profil linkedin Harcen Gaming">
+                    </a>
+                    <a href="https://instagram.com/harcengaming" target="_blank" >
+                        <img src="gambar/instagram.png" alt="Profil instagram Harcen Gaming">
+                    </a>
+                    <a href="https://wa.me/6285740283454" target="_blank" >
+                        <img src="gambar/whatsapp-brands 1.png" alt="Kontak WhatsApp saya">
+                    </a>
+                    <a href="mailto:bagasvergil@gmail.com" target="_blank" >
+                        <img src="gambar/envelope-regular 1.png" alt="Kontak email saya">
+                    </a>
                 </div>
             </div>    
         </div>
@@ -104,81 +109,72 @@
     <hr>
 
     <!-- ============ Keterampilan ============ -->
-    <h1 class="title-2" id="portfolio">Keterampilan Teknis</h1>
+    <h1 class="title-2" id="skill">Technical Skills</h1>
     <div class="skill-container">
         <div class="skill-card">
             <img src="./gambar/programming.png" class="skill-picture">
-            <p class="skill-title">Pemrograman</p>
+            <p class="skill-title">HTML, CSS</p>
         </div>
         <div class="skill-card">
             <img src="./gambar/mathematics.png" class="skill-picture">
-            <p class="skill-title">Matematika</p>
+            <p class="skill-title">Mathematics</p>
         </div>
         <div class="skill-card">
-            <img src="./gambar/business.png" class="skill-picture">
-            <p class="skill-title">Bisnis</p>
+            <img src="./gambar/sewing-machine.png" class="skill-picture">
+            <p class="skill-title">Sewing</p>
         </div>
         <div class="skill-card">
             <img src="./gambar/design.png" class="skill-picture">
-            <p class="skill-title">Desain</p>
+            <p class="skill-title">Graphic Design</p>
         </div>
     </div>
 
-    <h1 class="title-2" id="portfolio">Keterampilan NonTeknis</h1>
+    <h1 class="title-2" id="portfolio">Non-Technical Skills</h1>
     <div class="skill-container">
         <div class="skill-card">
             <img src="./gambar/teamwork.png" class="skill-picture">
-            <p class="skill-title">Kerjasama</p>
+            <p class="skill-title">Teamwork</p>
         </div>
         <div class="skill-card">
-            <img src="./gambar/public-speaking.png" class="skill-picture">
-            <p class="skill-title">Berbicara di depan publik</p>
+            <img src="./gambar/leader.png" class="skill-picture">
+            <p class="skill-title">Leader</p>
         </div>
         <div class="skill-card">
-            <img src="./gambar/decision-making.png" class="skill-picture">
-            <p class="skill-title">Pengambilan Keputusan</p>
+            <img src="./gambar/communcation.png" class="skill-picture">
+            <p class="skill-title">Communication</p>
         </div>
         <div class="skill-card">
-            <img src="./gambar/time-management.png" class="skill-picture">
-            <p class="skill-title">Manajemen Waktu</p>
+            <img src="./gambar/discuss.png" class="skill-picture">
+            <p class="skill-title">Discuss</p>
         </div>
     </div>
     <hr>
 
     <!-- ======================== Pengalaman ==================== -->
-    <h1 class="title-2" id="experience">Pengalaman Kerja</h1>
+    <h1 class="title-2" id="experience">Work experience</h1>
     <div class="experience-card">
-        <h1 class="title-3">Perusahaan A</h1>
-        <h1 class="title-4">2020 - Sekarang</h1>
-        <p class="description">Kepala Divisi Marketing</p>
-    </div>
-    <div class="experience-card">
-        <h1 class="title-3">Korporasi B</h1>
-        <h1 class="title-4">2015 - 2020</h1>
-        <p class="description">Manajer Sales</p>
-    </div>
-    <div class="experience-card">
-        <h1 class="title-3">Perusahaan C</h1>
-        <h1 class="title-4">2011 - 2015</h1>
-        <p class="description">Staf Sales</p>
+        <h1 class="title-3">KSU BIMA (Bina Umat)</h1>
+        <h1 class="title-4">2017</h1>
+        <p class="description">
+            In this small company engaged in production, 
+            I served as the cleaning division of the Swallow's Nest.
+            <!-- Di perusahaan kecil yang bergerak 
+            di bidang produksi ini, saya bertugas sebagai devisi
+            pembersihan Sarang Burung Walet. -->
+        </p>
     </div>
     <hr>
 
     <!-- ======================== Pengalaman ==================== -->       
-    <h1 class="title-2" id="education">Pendidikan</h1>
+    <h1 class="title-2" id="education">Education</h1>
     <div class="education-container">
         <div class="education-card">
-            <h1 class="title-3">Universitas A</h1>
-            <h1 class="title-4">2007 - 2011</h1>
-            <p class="description">Jurusan Marketing</p>
-        </div>
-        <div class="education-card">
-            <h1 class="title-3">SMA B</h1>
-            <h1 class="title-4">2004 - 2007</h1>
-        </div>
-        <div class="education-card">
-            <h1 class="title-3">SMP C</h1>
-            <h1 class="title-4">2001 - 2004</h1>
+            <h1 class="title-3">SMA Negeri 1 Candiroto</h1>
+            <h1 class="title-4">2017 - 2020</h1>
+            <p class="description">
+                <!-- Jurusan MIPA -->
+                Majors in mathematics and science.
+            </p>
         </div>
     </div>
 
