--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <li>
                     <a href="#education">Education</a>
                 </li>
+                <li>
+                    <a href="#informal-education">Informal Education</a>
+                </li>
             </ul>            
         </nav>
     </header>
@@ -53,7 +56,7 @@
                 </p>
                 <div class="social-media-container">
                     <a href="https://www.linkedin.com/in/harcengaming/" target="_blank" >
-                        <img src="gambar/linkedin.png" alt="Profil linkedin Harcen Gaming">
+                        <img src="gambar/linkedin.png"  alt="Profil linkedin Harcen Gaming">
                     </a>
                     <a href="https://instagram.com/harcengaming" target="_blank" >
                         <img src="gambar/instagram.png" alt="Profil instagram Harcen Gaming">
@@ -75,17 +78,20 @@
     <div class="portfolio-card">
         <img 
             class="portfolio-picture"
-            src="./gambar/portfolio-1.jpg" 
+            src="./gambar/Screenshot (443).png" 
             alt="Logo"
         >
         <div>
-            <h1 class="title-3">Finalis Lomba Coding 2021</h1>
+            <h1 class="title-3">
+                2nd Place in the National Online ICT Competition 
+                for Disabilities in the Basic 2D Design Category in 2020
+            </h1>
             <p class="description">
-                Lomba ini adalah perlombaan
-                Pemrograman Kompetitif. Saya bisa mengerjakan kasus yang
-                diberikan dan membuat sebuah solusi yang efisien dan
-                hasilnya saya menjadi salah satu finalis dalam kompetisi
-                ini.
+                I won placed 2nd in the national level online competition 
+                with disability basic 2D design category on 3 december 2020.
+                Previously I participated in 2d design training for 1 week 
+                using the PowerPoint (PPT) application and I was diligent 
+                in self-study for 2 weeks.
             </p>
         </div>
     </div>
@@ -96,17 +102,14 @@
             alt="Logo"
         >
         <div>
-            <h1 class="title-3">Juara 1 Business Case Competition 2020</h1>
+            <h1 class="title-3">3rd place at SDLB Mathematics Olympiad for deaf students in 2012</h1>
             <p class="description">
-                Saya bersama rekan tim
-                berhasil untuk memenangkan perlombaan Business Case
-                Competition. Saya belajar banyak mengenai proses bisnis
-                yang terjadi pada perusahaan dan bagaimana cara membuat
-                proses logistik yang efisien.
+                The competition took place from 2-5 September 2012 at Hotel Bali. 
+                Participants were 264 SDLB/SMPLB/inclusive students from 33 provinces.
             </p>
         </div>
     </div>
-    <hr>
+    <hr color="#fff200" >
 
     <!-- ============ Keterampilan ============ -->
     <h1 class="title-2" id="skill">Technical Skills</h1>
@@ -148,7 +151,7 @@
             <p class="skill-title">Discuss</p>
         </div>
     </div>
-    <hr>
+    <hr color="#fff200" >
 
     <!-- ======================== Pengalaman ==================== -->
     <h1 class="title-2" id="experience">Work experience</h1>
@@ -163,9 +166,9 @@
             pembersihan Sarang Burung Walet. -->
         </p>
     </div>
-    <hr>
+    <hr color="#fff200" >
 
-    <!-- ======================== Pengalaman ==================== -->       
+    <!-- ======================== Pendidikan ==================== -->       
     <h1 class="title-2" id="education">Education</h1>
     <div class="education-container">
         <div class="education-card">
@@ -177,6 +180,21 @@
             </p>
         </div>
     </div>
+    <hr color="#fff200" >
+
+    <!-- ======================== Pendidikan informal ==================== -->       
+    <h1 class="title-2" id="informal-education">Informal Education</h1>
+    <div class="education-container">
+        <div class="education-card">
+            <h1 class="title-3">Deaf to Dev Training</h1>
+            <h1 class="title-4">ongoing for 1 month</h1>
+            <p class="description">
+                <!-- Jurusan MIPA -->
+                Web Development Pemula with HTML & CSS.
+            </p>
+        </div>
+    </div>
+    <hr color="#fff200" >
 
     <!-- ======================== Footer ======================== --> 
     <footer>
