revisi styling & add logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <title>Portfolio Webiste - Bagas Hary Cendekiawan</title>
 </head>
@@ -44,7 +44,7 @@
                 src="./gambar/DSC_4151 blue Cropped.jpg" 
                 id="profile-picture"
             >
-            <div id="bio">
+            <div id="bio" class="bio-query">
                 <h1 class="title-1" id="name">Bagas Hary Cendekiawan</h1>
                 <p class="subtitle">
                     Hello everyone! <br> My introduction is Harcen, I'm from Temanggung, Central Java.
@@ -56,16 +56,19 @@
                 </p>
                 <div class="social-media-container">
                     <a href="https://www.linkedin.com/in/harcengaming/" target="_blank" >
-                        <img src="gambar/linkedin.png"  alt="Profil linkedin Harcen Gaming">
+                        <img 
+                        src="./medsos/linkedin.png" 
+                        class="icon" 
+                        alt="Profil linkedin Harcen Gaming">
                     </a>
                     <a href="https://instagram.com/harcengaming" target="_blank" >
-                        <img src="gambar/instagram.png" alt="Profil instagram Harcen Gaming">
+                        <img src="./medsos/instagram.png" class="icon" alt="Profil instagram Harcen Gaming">
                     </a>
                     <a href="https://wa.me/6285740283454" target="_blank" >
-                        <img src="gambar/whatsapp-brands 1.png" alt="Kontak WhatsApp saya">
+                        <img src="./medsos/wa.png" class="icon" alt="Kontak WhatsApp saya">
                     </a>
                     <a href="mailto:bagasvergil@gmail.com" target="_blank" >
-                        <img src="gambar/envelope-regular 1.png" alt="Kontak email saya">
+                        <img src="./medsos/mail.png" class="icon" alt="Kontak email saya">
                     </a>
                 </div>
             </div>    
@@ -176,7 +179,7 @@
             <h1 class="title-4">2017 - 2020</h1>
             <p class="description">
                 <!-- Jurusan MIPA -->
-                Majors in mathematics and science.
+                Majors in mathematics and science. 
             </p>
         </div>
     </div>
