revisi non-technical skills

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <div class="home-around-skill2">
             <h1 class="title-2" id="portfolio">Non-Technical Skills</h1>
-            <a href="#top">Home</a>
+            <!-- <a href="#top">Home</a> -->
         </div>
         
         <div class="skill-container">
