--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <!-- ======================== Pendidikan informal ==================== --> 
         <div class="home-around-work3">
-            <h1 class="title-2" id="education">Informal Education</h1>
+            <h1 class="title-2" id="informal-education">Informal Education</h1>
             <a href="#top">Home</a>
         </div>       
         
