remove margin right

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="content-center">
         <!-- ============ Portfolio ============ -->
         
-        <div class="home-around-portofolio">
+        <div class="home-around">
             <h1 class="title-2" id="portfolio">Portfolio</h1>
             <a href="#top">Home</a>
         </div>
@@ -121,7 +121,7 @@
         <hr color="#fff200" >
 
         <!-- ============ Keterampilan ============ -->
-        <div class="home-around-skill">
+        <div class="home-around">
             <h1 class="title-2" id="skill">Technical Skills</h1>
             <a href="#top">Home</a>
         </div>
@@ -145,7 +145,7 @@
             </div>
         </div>
 
-        <div class="home-around-skill2">
+        <div class="home-around">
             <h1 class="title-2" id="portfolio">Non-Technical Skills</h1>
             <!-- <a href="#top">Home</a> -->
         </div>
@@ -171,7 +171,7 @@
         <hr color="#fff200" >
 
         <!-- ======================== Pengalaman ==================== -->
-        <div class="home-around-work">
+        <div class="home-around">
             <h1 class="title-2" id="experience">Work experience</h1>
             <a href="#top">Home</a>
         </div>
@@ -190,7 +190,7 @@
         <hr color="#fff200" >
 
         <!-- ======================== Pendidikan ==================== -->
-        <div class="home-around-work2">
+        <div class="home-around">
             <h1 class="title-2" id="education">Education</h1>
             <a href="#top">Home</a>
         </div>       
@@ -208,7 +208,7 @@
         <hr color="#fff200" >
 
         <!-- ======================== Pendidikan informal ==================== --> 
-        <div class="home-around-work3">
+        <div class="home-around">
             <h1 class="title-2" id="informal-education">Informal Education</h1>
             <a href="#top">Home</a>
         </div>       
